# heidi-sdk

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  consumer-jna-rules.pro  gradle.properties  settings.gradle.kts
.github/scripts/: ci-gradle.sh
.github/workflows/: build.yml  release.yml
examples/android-verifier/: build.gradle.kts
examples/android-verifier/src/debug/res/xml/: network_security_config.xml
examples/android-verifier/src/main/: AndroidManifest.xml
examples/android-verifier/src/main/res/values/: strings.xml  themes.xml
examples/android-verifier/src/main/res/xml/: network_security_config.xml
examples/android-wallet/: build.gradle.kts
examples/android-wallet/src/main/: AndroidManifest.xml
examples/android-wallet/src/main/res/layout/: activity_wallet.xml  fragment_compose.xml
examples/android-wallet/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
heidi-credentials/: build.gradle.kts  gradle.properties
heidi-credentials/rust/: Cargo.toml  build.rs  probestack_fix.c
heidi-credentials/rust/src/: bbs.rs  claims_pointer.rs  ldp.rs  lib.rs  mdoc.rs  models.rs  open_badges.rs  sdjwt.rs  w3c.rs
heidi-credentials/rust/src/json_ld/: loader.rs  mod.rs
heidi-credentials/rust/src/sdjwt_util/: builder.rs  mod.rs  models.rs  parse.rs  util.rs
heidi-credentials/rust/src/sdjwt_util/hash_algs/: mod.rs
heidi-credentials/rust/src/sdjwt_util/hash_algs/ec_pedersen/: canonicalize.rs  mod.rs
heidi-credentials/rust/src/sdjwt_util/hash_algs/sha/: mod.rs
heidi-credentials/rust/src/sdjwt_util/zkp/: equality_proof.rs  mod.rs
heidi-credentials/rust/src/test_files/: ec-pid.sdjwt
heidi-credentials/src/commonMain/kotlin/ch/ubique/heidi/credentials/: Bbs.kt  ClaimsPointer.kt  JwkThumbprint.kt  Mdoc.kt  SdJwt.kt  W3C.kt
heidi-crypto/: build.gradle.kts  gradle.properties
heidi-crypto/rust/: Cargo.toml
heidi-crypto/rust/src/: lib.rs
heidi-crypto/rust/src/crypto/: eddsa.rs  mod.rs  multihash.rs  signing.rs  x509.rs
heidi-crypto/rust/src/iso180135/: mod.rs
heidi-crypto/rust/src/jws/: mod.rs
heidi-crypto/rust/src/jwt/: mod.rs  verifier.rs
heidi-dcql/: build.gradle.kts  gradle.properties
heidi-dcql/rust/: Cargo.toml  uniffi.toml
heidi-dcql/rust/src/: lib.rs  models.rs  verify.rs
heidi-dcql/rust/src/models/: mod.rs
heidi-dcql/rust/src/models/parser/: mod.rs
heidi-dcql/rust/src/models/trusted_authority/: mod.rs
heidi-dcql/src/commonMain/kotlin/ch/ubique/heidi/dcql/: Bbs.kt  DcqlClaimQueryResolver.kt  DcqlQueryExtension.kt  DcqlQueryGenerator.kt  DcqlQuerySerializer.kt  Mdoc.kt  SdJwt.kt  SdJwtGeneric.kt  Verification.kt  W3C.kt
heidi-issuance/: build.gradle.kts  gradle.properties
heidi-issuance-models/: build.gradle.kts  gradle.properties
heidi-issuance/rust/: Cargo.toml  uniffi.toml
heidi-issuance/rust/src/: lib.rs
heidi-issuance/rust/src/jwt/: mod.rs
heidi-issuance/src/androidMain/kotlin/ch/ubique/heidi/issuance/: HeidiIssuance.android.kt
heidi-issuance/src/commonMain/kotlin/ch/ubique/heidi/issuance/: HeidiIssuance.kt
heidi-issuance/src/commonTest/kotlin/: MetadataServiceTest.kt
heidi-issuance/src/iosMain/kotlin/ch/ubique/heidi/issuance/: HeidiIssuance.ios.kt
heidi-issuance/src/jvmMain/kotlin/ch/ubique/heidi/issuance/: HeidiIssuance.jvm.kt
heidi-pdf/: build.gradle.kts  gradle.properties
heidi-pdf/rust/: Cargo.toml  uniffi.toml
heidi-pdf/rust/src/: lib.rs
heidi-presentation/: build.gradle.kts  gradle.properties
heidi-presentation/rust/: Cargo.toml
heidi-presentation/rust/src/: lib.rs
heidi-proximity/: build.gradle.kts  gradle.properties
heidi-proximity/src/androidMain/kotlin/ch/ubique/heidi/proximity/: HeidiProximity.android.kt
heidi-proximity/src/commonMain/kotlin/ch/ubique/heidi/proximity/: ConnectionTimeoutDefaults.kt  HeidiProximity.kt  ProximityError.kt  ProximityProtocol.kt
heidi-proximity/src/iosMain/kotlin/ch/ubique/heidi/proximity/: HeidiProximity.ios.kt
heidi-trust/: build.gradle.kts  gradle.properties
heidi-trust/rust/: Cargo.toml  uniffi.toml
heidi-trust/rust/src/: lib.rs
heidi-trust/src/androidMain/: AndroidManifest.xml
heidi-trust/src/commonMain/kotlin/ch/ubique/heidi/trust/: HeidiTrust.kt  (+2 more)
heidi-trust/src/commonTest/kotlin/: DidResolverTest.kt  DidTdwResolverTest.kt  StatusListTest.kt
heidi-util/: build.gradle.kts  gradle.properties
heidi-util/rust/: Cargo.toml
heidi-util/rust/src/: lib.rs  log.rs  metadata.rs  value.rs
heidi-visualization/: build.gradle.kts  gradle.properties
heidi-visualization/src/commonTest/composeResources/files/oca/: aries_bundle.json  capture_base_attribute_types.json  integrity_test_IM07E8mTX1Vn9knn9_LlGJPCeOkcrF7gnXyJitSL7D1R.json  swiss_oca_cluster_ordering.json
heidi-wallet/: build.gradle.kts  gradle.properties  uniffi.toml
heidi-wallet/rust/: Cargo.toml  ec-private.pem
heidi-wallet/rust/src/: dpop.rs  lib.rs  signing.rs  util.rs  vc.rs
heidi-wallet/rust/src/agents/: mod.rs
heidi-wallet/rust/src/backend/: mod.rs
heidi-wallet/rust/src/backup/: mod.rs  wasm.rs
heidi-wallet/rust/src/backup/backend/: mod.rs
heidi-wallet/rust/src/crypto/: encryption.rs  mod.rs  signing.rs
heidi-wallet/rust/src/error/: mod.rs
heidi-wallet/rust/src/faker/: mod.rs
heidi-wallet/rust/src/formats/: mod.rs
heidi-wallet/rust/src/formats/bbs/: mod.rs
heidi-wallet/rust/src/formats/mdoc/: helper.rs  mod.rs
heidi-wallet/rust/src/formats/sdjwt/: mod.rs
heidi-wallet/rust/src/frost/: mod.rs  wasm.rs
heidi-wallet/rust/src/hsm/: mod.rs
heidi-wallet/rust/src/issuance/: auth.rs  helper.rs  metadata.rs  mod.rs  models.rs  requests.rs
heidi-wallet/rust/src/jwx/: mod.rs
heidi-wallet/rust/src/log/: mod.rs
heidi-wallet/rust/src/presentation/: helper.rs  mod.rs  presentation_exchange.rs
heidi-wallet/rust/src/testing/: mod.rs  signing.rs
heidi-wallet/src/commonMain/sqldelight/migrations/: 1.sqm  2.sqm  3.sqm  4.sqm
sample-ios-heidi/: ContentView.swift  ProximityWrapper.swift  Verifier.swift  sample_ios_heidiApp.swift
sample-ios-heidi.xcodeproj/: project.pbxproj
(+478 files in other folders)
