[workspace]
resolver = "3"
members = [
    "heidi-credentials/rust",
    "heidi-crypto/rust",
    "heidi-dcql/rust",
    "heidi-issuance/rust",
    "heidi-presentation/rust",
    "heidi-trust/rust",
    "heidi-util/rust",
    "heidi-wallet/rust",
    "heidi-pdf/rust"
]
[workspace.dependencies]
serde_json = "1.0.133"
sha2 = "0.10.8"
chrono = "0.4.39"
anyhow = "1.0.98"
uniffi = { version = "=0.28.3" }
base64 = "0.22.1"
ciborium = "0.2.2"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.8.5"
p256 = { version = "0.13.2", features = ["ecdsa"] }
p384 = "0.13.1"
libc = "0.2"
tokio = { version = "1.38.0" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "cookies",
] }
heidi-jwt = { git = "https://github.com/heidiverse/heidi-jwt" }
oid4vc = { version = "0.1.0", git = "https://github.com/heidiverse/openid4vc.git", branch = "dev" }
# oid4vc = { version = "0.1.0", path = "../../../openid4vc" , optional = true }
openidconnect-federation = { git = "https://github.com/UbiqueInnovation/openidconnect-federation.git", branch = "main" }
# openidconnect-federation = { path = "../openidconnect-federation" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ark-serialize = "0.4.2"
josekit = { git = "https://github.com/ubamrein/josekit-rs.git", default-features = false, features = [
    "rustcrypto",
] }
