[package]
name = "heidi-credentials-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_credentials_rust"

[dependencies]
anyhow.workspace = true
uniffi = { features = ["tokio"], workspace = true, optional = true }
tokio = { features = ["full"], workspace = true, optional = true }
base64.workspace = true
ciborium.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
reqwest.workspace = true
heidi-util-rust = { path = "../../heidi-util/rust" }
heidi-crypto-rust = { path = "../../heidi-crypto/rust" }
zkp-util = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service", optional = true }
rdf-util = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service" }
next-gen-signatures = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service", features = [
    "zkp",
], optional = true }
rand_core.workspace = true
ark-serialize.workspace = true
num-bigint = "0.4.6"
json-ld = { version = "0.21.2", features = ["reqwest"] }
iref = "3.2.2"
mime = "0.3.17"
json-syntax = "0.12.5"
static-iref = "3.0.0"
multibase = "0.9.2"
png = "0.18.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.111", features = ["vendored"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["bbs", "uniffi"]
bbs = ["next-gen-signatures", "zkp-util"]
uniffi = ["dep:uniffi", "dep:tokio"]
