[package]
name = "heidi-credentials-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_credentials_rust"

[dependencies]
anyhow.workspace = true
uniffi = { workspace = true, optional = true }
tokio = { features = ["full"], workspace = true, optional = true }
base64.workspace = true
ciborium = { workspace = true, optional = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
chrono.workspace = true
reqwest = {workspace = true, optional = true }
heidi-util-rust = { path = "../../heidi-util/rust" }
heidi-crypto-rust = { path = "../../heidi-crypto/rust", optional = true }
zkp-util = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service", optional = true }
rdf-util = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service", optional = true }
next-gen-signatures = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service", features = [
    "zkp",
], optional = true }
rand_core.workspace = true
ark-serialize = {workspace = true, optional = true }
num-bigint = {version = "0.4.6", optional = true }
json-ld = { version = "0.21.2", features = ["reqwest"], optional = true }
iref = {version = "3.2.2", optional = true }
mime = {version = "0.3.17", optional = true }
json-syntax = {version = "0.12.5", optional = true }
static-iref = {version = "3.0.0", optional = true }
multibase = { version = "0.9.2", optional = true }
png = { version = "0.18.0", optional = true }
curve25519-dalek = {version = "=4.1.2", features = ["rand_core", "digest"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.111", features = ["vendored"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

p256 = {version = "0.13.2", features = ["jwk", "ecdsa"]}

[features]
default = ["bbs", "mdoc", "sdjwt", "w3c", "openbadges", "uniffi"]
bbs = ["next-gen-signatures", "zkp-util", "rdf-util", "dep:ark-serialize", "dep:num-bigint"]
mdoc = ["ciborium"]
sdjwt = ["dep:sha2"]
sdjwt-extension = ["sdjwt", "experimental"]
w3c = ["json-ld", "dep:tokio", "sdjwt"]
openbadges = ["dep:png", "w3c"]
json-ld = ["dep:json-ld", "rdf-util", "dep:multibase", "dep:reqwest", "dep:iref", "dep:mime", "dep:static-iref", "heidi-crypto-rust", "dep:json-syntax"]
tokio = ["dep:tokio", "uniffi/tokio"]
uniffi = ["dep:uniffi"]
experimental = ["dep:curve25519-dalek"]
