[package]
name = "heidi-crypto-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_crypto_rust"

[dependencies]
uniffi.workspace = true
base64.workspace = true
ciborium.workspace = true
heidi-jwt.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
p256 = { features = ["ecdsa", "jwk", "ecdh"], workspace = true }
x509-parser = { version = "0.16.0", features = ["verify"] }
oid-registry = "0.7.0"
simple_x509 = "1.1.0"
blake3 = "1.8.1"
p384.workspace = true
heidi-util-rust = { path = "../../heidi-util/rust" }
hkdf = "0.12.4"
aes-gcm = "0.10.3"

ed25519-dalek = "2.2.0"
multibase = "0.9.2"
unsigned-varint = "0.8.0"

[features]
default = ["uniffi"]
uniffi = []
