[package]
name = "heidi-dcql-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_dcql_rust"

[dependencies]
uniffi.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
jlc = { git = "https://github.com/UbiqueInnovation/possum.git", optional = true }
heidi-util-rust = { path = "../../heidi-util/rust" }
heidi-credentials-rust = { path = "../../heidi-credentials/rust", default-features = false }

[features]
default = ["uniffi"]
bbs = ["heidi-credentials-rust/bbs"]
mdoc = ["heidi-credentials-rust/mdoc"]
sdjwt = ["heidi-credentials-rust/sdjwt"]
w3c = ["heidi-credentials-rust/w3c"]
openbadges = ["heidi-credentials-rust/openbadges"]
uniffi = ["heidi-credentials-rust/uniffi"]
builtin_parsers = ["bbs", "mdoc", "sdjwt", "w3c", "openbadges"]
jlc = ["dep:jlc"]
