[package]
name = "heidi-util-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_util_rust"

[dependencies]
uniffi.workspace = true
base64.workspace = true
ciborium.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
jlc = { git = "https://github.com/UbiqueInnovation/possum.git" }
flate2 = "1.1.1"
[target.'cfg(any(target_os = "android"))'.dependencies]
libc.workspace = true
[dev-dependencies]
p256 = { features = ["ecdsa"], workspace = true }
