[package]
name = "heidi-wallet-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "heidi_wallet_rust"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.80"
chrono.workspace = true
did-key = "0.2.1"

rand.workspace = true
rand_core.workspace = true
reqwest = { features = ["cookies"], optional = true, workspace = true }
reqwest-middleware = { version = "0.2", optional = true }
reqwest-retry = { version = "0.3.0", optional = true }
sdjwt = { version = "0.7.3", git = "https://github.com/UbiqueInnovation/sd-jwt.git", branch = "feature/qes" }
#sdjwt = {  path = "../../../sd-jwt" }
serde_json.workspace = true
sha2.workspace = true
uniffi = { features = ["tokio"], optional = true, workspace = true }
bs58 = "0.5.1"
serde.workspace = true
elliptic-curve = { version = "0.13.8", features = ["jwk", "sec1"] }
p256 = { features = [
    "jwk",
    "expose-field",
    "hash2curve",
    "pem",
], workspace = true }
aes-gcm = "0.10.3"
base64.workspace = true
monostate = "0.1.13"
uuid = { version = "1.10.0", features = ["v4"] }
hex = "0.4.3"
zeroize = "1.8.1"
task-local-extensions = "0.1.4"
hkdf = "0.12.4"
ciborium.workspace = true
lazy_static = "1.5.0"
secret_sharing_and_dkg = "0.13.0"
ark-secp256r1 = "0.4.0"
ark-serialize.workspace = true
jsonpath_lib = "0.3.0"
bip39-dict = "0.1.3"
frost-ed25519 = "1.0.0"
reqwest_cookie_store = { version = "0.6.0", optional = true }
x509-parser = { version = "0.16.0", features = ["validate", "verify"] }
webpki-roots = "0.26.3"
regex = "1.10.6"
serde_urlencoded = "0.7.1"
rand_distr = "0.4.3"
tokio = { features = ["time"], optional = true, workspace = true }
p384.workspace = true
web-time = "1.1.0"
http = "0.2.12"
heidi-util-rust = { path = "../../heidi-util/rust", default-features = false }
heidi-credentials-rust = { path = "../../heidi-credentials/rust", default-features = false }
crunchy = "=0.2.2"
rdf-util = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service.git", optional = true }
next-gen-signatures = { git = "https://github.com/UbiqueInnovation/sprind-next-gen-signing-service.git", features = [
    "all",
], optional = true }
josekit.workspace = true
heidi-jwt.workspace = true
serde_with_macros.workspace = true
jsonschema.workspace = true
is_empty = "0.3.0"
openidconnect-federation.workspace = true

[target.'cfg(any(target_family = "wasm"))'.dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = { version = "0.1", optional = false }

[target.'cfg(any(target_os = "android"))'.dependencies]
libc.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "darwin"))'.dependencies]
security-framework = { version = "=2.10" }

[dev-dependencies]
open = "5.1.4"
wiremock = "0.6"
tokio = { features = ["full"], workspace = true }
lipsum = "0.9.1"
ed25519-dalek = "2.1.1"

[features]
default = [
    "uniffi",
    "oid4vp",
    "reqwest",
    "reqwest_cookies",
    "heidi-credentials-rust/bbs",
    "rdf-util",
    "next-gen-signatures",

]
uniffi = ["dep:uniffi", "dep:tokio"]
oid4vp = ["dep:reqwest"]
reqwest = ["dep:reqwest", "dep:reqwest-middleware", "dep:reqwest-retry"]
reqwest_cookies = ["dep:reqwest_cookie_store"]
wasm = ["uuid/js"]
